AMPS-264 set jvm args for each of the configured products
git-svn-id: https://studio.atlassian.com/svn/AMPS/trunk@57894 2c54a935-e501-0410-bc05-97a93f6bca70